# prof-viewer

./: Cargo.toml  check.sh  index.html  legion_prof_viewer-cd63bc10182d3d43.js
.github/workflows/: pages.yml  rust.yml
examples/: random_data.rs
src/: app.rs  archive_data.rs  data.rs  deferred_data.rs  file_data.rs  lib.rs  main.rs  merge_data.rs  nvtxw.rs  parallel_data.rs  timestamp.rs
src/app/: core.rs  mod.rs  tile_manager.rs
src/http/: client.rs  fetch.rs  mod.rs  schema.rs  server.rs  url.rs
